--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ img {
 }
 
 #purple {
-    color: hsl(277, 64%, 61%);
+    color: hsl(277, 64%, 50%);
 }
 
 .stats-container {
@@ -178,6 +178,7 @@ img {
         position: relative;
         left: 30px;
         bottom: 170px;
+        margin-top: 100px;
     }
 
     #paragraph {
@@ -192,7 +193,7 @@ img {
         flex-direction: column;
         justify-content: center;
         position: relative;
-        top: 135px;
+        top: 90px;
         gap:80px;
 
     }
